--- a/src/sass/part/_icon.sass
+++ b/src/sass/part/_icon.sass
@@ -13,6 +13,8 @@
 		+sprite($s-icon-hearth)
 	&-star
 		+sprite($s-icon-star)
+		&-big
+			+sprite($s-icon-star-big)
 	&-mouse
 		+sprite($s-icon-mouse)
 	&-up
