--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -122,7 +122,7 @@ title: TheBottle
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -147,7 +147,7 @@ title: TheBottle
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -173,7 +173,7 @@ title: TheBottle
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_old">1500 грн</span><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -199,7 +199,7 @@ title: TheBottle
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_old">1500 грн</span><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -224,7 +224,7 @@ title: TheBottle
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -249,7 +249,7 @@ title: TheBottle
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -275,7 +275,7 @@ title: TheBottle
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_old">1500 грн</span><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -301,7 +301,7 @@ title: TheBottle
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_old">1500 грн</span><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
