--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -5,6 +5,7 @@ $white:		#fff
 $blue: 		#82b0f4
 $pink: #b30941
 $gray: #e3e5e8
+$orange: #e74c3c
 // Typography
 // Font Size
 $text-xs: 	12px
@@ -13,6 +14,7 @@ $text-reg: 	16px
 $text-md: 	18px
 $text-exmd: 20px
 $text-lg: 	22px
+$indent: 80px
 
 $exo: 'Exo 2'
 $futuraPT: 'FuturaPT'
