--- a/src/sass/helpers/_sprite.sass
+++ b/src/sass/helpers/_sprite.sass
@@ -9,27 +9,27 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites
 $s-icon-basket-name: 's-icon-basket'
-$s-icon-basket-x: 0px
+$s-icon-basket-x: 51px
 $s-icon-basket-y: 150px
-$s-icon-basket-offset-x: 0px
+$s-icon-basket-offset-x: -51px
 $s-icon-basket-offset-y: -150px
 $s-icon-basket-width: 16px
 $s-icon-basket-height: 20px
 $s-icon-basket-total-width: 249px
 $s-icon-basket-total-height: 187px
 $s-icon-basket-image: '../img/sprite.png'
-$s-icon-basket: (0px, 150px, 0px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-basket', )
+$s-icon-basket: (51px, 150px, -51px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-basket', )
 $s-icon-close-basket-name: 's-icon-close-basket'
-$s-icon-close-basket-x: 105px
+$s-icon-close-basket-x: 93px
 $s-icon-close-basket-y: 150px
-$s-icon-close-basket-offset-x: -105px
+$s-icon-close-basket-offset-x: -93px
 $s-icon-close-basket-offset-y: -150px
 $s-icon-close-basket-width: 16px
 $s-icon-close-basket-height: 16px
 $s-icon-close-basket-total-width: 249px
 $s-icon-close-basket-total-height: 187px
 $s-icon-close-basket-image: '../img/sprite.png'
-$s-icon-close-basket: (105px, 150px, -105px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-close-basket', )
+$s-icon-close-basket: (93px, 150px, -93px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-close-basket', )
 $s-icon-close-name: 's-icon-close'
 $s-icon-close-x: 181px
 $s-icon-close-y: 96px
@@ -42,49 +42,49 @@ $s-icon-close-total-height: 187px
 $s-icon-close-image: '../img/sprite.png'
 $s-icon-close: (181px, 96px, -181px, -96px, 12px, 12px, 249px, 187px, '../img/sprite.png', 's-icon-close', )
 $s-icon-facebook-name: 's-icon-facebook'
-$s-icon-facebook-x: 63px
+$s-icon-facebook-x: 135px
 $s-icon-facebook-y: 150px
-$s-icon-facebook-offset-x: -63px
+$s-icon-facebook-offset-x: -135px
 $s-icon-facebook-offset-y: -150px
 $s-icon-facebook-width: 16px
 $s-icon-facebook-height: 16px
 $s-icon-facebook-total-width: 249px
 $s-icon-facebook-total-height: 187px
 $s-icon-facebook-image: '../img/sprite.png'
-$s-icon-facebook: (63px, 150px, -63px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-facebook', )
+$s-icon-facebook: (135px, 150px, -135px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-facebook', )
 $s-icon-hearth-name: 's-icon-hearth'
-$s-icon-hearth-x: 126px
+$s-icon-hearth-x: 177px
 $s-icon-hearth-y: 150px
-$s-icon-hearth-offset-x: -126px
+$s-icon-hearth-offset-x: -177px
 $s-icon-hearth-offset-y: -150px
 $s-icon-hearth-width: 16px
 $s-icon-hearth-height: 14px
 $s-icon-hearth-total-width: 249px
 $s-icon-hearth-total-height: 187px
 $s-icon-hearth-image: '../img/sprite.png'
-$s-icon-hearth: (126px, 150px, -126px, -150px, 16px, 14px, 249px, 187px, '../img/sprite.png', 's-icon-hearth', )
+$s-icon-hearth: (177px, 150px, -177px, -150px, 16px, 14px, 249px, 187px, '../img/sprite.png', 's-icon-hearth', )
 $s-icon-input-arrow-name: 's-icon-input-arrow'
-$s-icon-input-arrow-x: 166px
+$s-icon-input-arrow-x: 217px
 $s-icon-input-arrow-y: 150px
-$s-icon-input-arrow-offset-x: -166px
+$s-icon-input-arrow-offset-x: -217px
 $s-icon-input-arrow-offset-y: -150px
 $s-icon-input-arrow-width: 12px
 $s-icon-input-arrow-height: 6px
 $s-icon-input-arrow-total-width: 249px
 $s-icon-input-arrow-total-height: 187px
 $s-icon-input-arrow-image: '../img/sprite.png'
-$s-icon-input-arrow: (166px, 150px, -166px, -150px, 12px, 6px, 249px, 187px, '../img/sprite.png', 's-icon-input-arrow', )
+$s-icon-input-arrow: (217px, 150px, -217px, -150px, 12px, 6px, 249px, 187px, '../img/sprite.png', 's-icon-input-arrow', )
 $s-icon-instagram-name: 's-icon-instagram'
-$s-icon-instagram-x: 84px
+$s-icon-instagram-x: 156px
 $s-icon-instagram-y: 150px
-$s-icon-instagram-offset-x: -84px
+$s-icon-instagram-offset-x: -156px
 $s-icon-instagram-offset-y: -150px
 $s-icon-instagram-width: 16px
 $s-icon-instagram-height: 16px
 $s-icon-instagram-total-width: 249px
 $s-icon-instagram-total-height: 187px
 $s-icon-instagram-image: '../img/sprite.png'
-$s-icon-instagram: (84px, 150px, -84px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-instagram', )
+$s-icon-instagram: (156px, 150px, -156px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-instagram', )
 $s-icon-liqueurs-active-name: 's-icon-liqueurs-active'
 $s-icon-liqueurs-active-x: 0px
 $s-icon-liqueurs-active-y: 0px
@@ -108,27 +108,27 @@ $s-icon-liqueurs-total-height: 187px
 $s-icon-liqueurs-image: '../img/sprite.png'
 $s-icon-liqueurs: (69px, 0px, -69px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs', )
 $s-icon-login-name: 's-icon-login'
-$s-icon-login-x: 21px
+$s-icon-login-x: 72px
 $s-icon-login-y: 150px
-$s-icon-login-offset-x: -21px
+$s-icon-login-offset-x: -72px
 $s-icon-login-offset-y: -150px
 $s-icon-login-width: 16px
 $s-icon-login-height: 20px
 $s-icon-login-total-width: 249px
 $s-icon-login-total-height: 187px
 $s-icon-login-image: '../img/sprite.png'
-$s-icon-login: (21px, 150px, -21px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-login', )
+$s-icon-login: (72px, 150px, -72px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-login', )
 $s-icon-menu-name: 's-icon-menu'
-$s-icon-menu-x: 147px
+$s-icon-menu-x: 198px
 $s-icon-menu-y: 150px
-$s-icon-menu-offset-x: -147px
+$s-icon-menu-offset-x: -198px
 $s-icon-menu-offset-y: -150px
 $s-icon-menu-width: 14px
 $s-icon-menu-height: 10px
 $s-icon-menu-total-width: 249px
 $s-icon-menu-total-height: 187px
 $s-icon-menu-image: '../img/sprite.png'
-$s-icon-menu: (147px, 150px, -147px, -150px, 14px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-menu', )
+$s-icon-menu: (198px, 150px, -198px, -150px, 14px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-menu', )
 $s-icon-mouse-name: 's-icon-mouse'
 $s-icon-mouse-x: 181px
 $s-icon-mouse-y: 75px
@@ -141,38 +141,60 @@ $s-icon-mouse-total-height: 187px
 $s-icon-mouse-image: '../img/sprite.png'
 $s-icon-mouse: (181px, 75px, -181px, -75px, 10px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-mouse', )
 $s-icon-search-name: 's-icon-search'
-$s-icon-search-x: 42px
+$s-icon-search-x: 114px
 $s-icon-search-y: 150px
-$s-icon-search-offset-x: -42px
+$s-icon-search-offset-x: -114px
 $s-icon-search-offset-y: -150px
 $s-icon-search-width: 16px
 $s-icon-search-height: 16px
 $s-icon-search-total-width: 249px
 $s-icon-search-total-height: 187px
 $s-icon-search-image: '../img/sprite.png'
-$s-icon-search: (42px, 150px, -42px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-search', )
+$s-icon-search: (114px, 150px, -114px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-search', )
+$s-icon-star-big-name: 's-icon-star-big'
+$s-icon-star-big-x: 26px
+$s-icon-star-big-y: 150px
+$s-icon-star-big-offset-x: -26px
+$s-icon-star-big-offset-y: -150px
+$s-icon-star-big-width: 20px
+$s-icon-star-big-height: 20px
+$s-icon-star-big-total-width: 249px
+$s-icon-star-big-total-height: 187px
+$s-icon-star-big-image: '../img/sprite.png'
+$s-icon-star-big: (26px, 150px, -26px, -150px, 20px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-star-big', )
+$s-icon-star-full-big-name: 's-icon-star-full-big'
+$s-icon-star-full-big-x: 0px
+$s-icon-star-full-big-y: 150px
+$s-icon-star-full-big-offset-x: 0px
+$s-icon-star-full-big-offset-y: -150px
+$s-icon-star-full-big-width: 21px
+$s-icon-star-full-big-height: 20px
+$s-icon-star-full-big-total-width: 249px
+$s-icon-star-full-big-total-height: 187px
+$s-icon-star-full-big-image: '../img/sprite.png'
+$s-icon-star-full-big: (0px, 150px, 0px, -150px, 21px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-star-full-big', )
 $s-icon-star-full-name: 's-icon-star-full'
 $s-icon-star-full-x: 181px
-$s-icon-star-full-y: 128px
+$s-icon-star-full-y: 113px
 $s-icon-star-full-offset-x: -181px
-$s-icon-star-full-offset-y: -128px
+$s-icon-star-full-offset-y: -113px
 $s-icon-star-full-width: 10px
 $s-icon-star-full-height: 10px
 $s-icon-star-full-total-width: 249px
 $s-icon-star-full-total-height: 187px
 $s-icon-star-full-image: '../img/sprite.png'
-$s-icon-star-full: (181px, 128px, -181px, -128px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star-full', )
+$s-icon-star-full: (181px, 113px, -181px, -113px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star-full', )
 $s-icon-star-name: 's-icon-star'
 $s-icon-star-x: 181px
-$s-icon-star-y: 113px
+$s-icon-star-y: 128px
 $s-icon-star-offset-x: -181px
-$s-icon-star-offset-y: -113px
+$s-icon-star-offset-y: -128px
 $s-icon-star-width: 10px
 $s-icon-star-height: 10px
 $s-icon-star-total-width: 249px
 $s-icon-star-total-height: 187px
 $s-icon-star-image: '../img/sprite.png'
-$s-icon-star: (181px, 113px, -181px, -113px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star', )
+$s-icon-star: (181px, 128px, -181px, -128px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star', )
 $s-icon-strong-alcohol-active-name: 's-icon-strong-alcohol-active'
 $s-icon-strong-alcohol-active-x: 0px
 $s-icon-strong-alcohol-active-y: 75px
@@ -207,27 +229,27 @@ $s-icon-up-total-height: 187px
 $s-icon-up-image: '../img/sprite.png'
 $s-icon-up: (0px, 175px, 0px, -175px, 6px, 12px, 249px, 187px, '../img/sprite.png', 's-icon-up', )
 $s-icon-vermouth-active-name: 's-icon-vermouth-active'
-$s-icon-vermouth-active-x: 61px
+$s-icon-vermouth-active-x: 121px
 $s-icon-vermouth-active-y: 75px
-$s-icon-vermouth-active-offset-x: -61px
+$s-icon-vermouth-active-offset-x: -121px
 $s-icon-vermouth-active-offset-y: -75px
 $s-icon-vermouth-active-width: 55px
 $s-icon-vermouth-active-height: 70px
 $s-icon-vermouth-active-total-width: 249px
 $s-icon-vermouth-active-total-height: 187px
 $s-icon-vermouth-active-image: '../img/sprite.png'
-$s-icon-vermouth-active: (61px, 75px, -61px, -75px, 55px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-vermouth-active', )
+$s-icon-vermouth-active: (121px, 75px, -121px, -75px, 55px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-vermouth-active', )
 $s-icon-vermouth-name: 's-icon-vermouth'
-$s-icon-vermouth-x: 121px
+$s-icon-vermouth-x: 61px
 $s-icon-vermouth-y: 75px
-$s-icon-vermouth-offset-x: -121px
+$s-icon-vermouth-offset-x: -61px
 $s-icon-vermouth-offset-y: -75px
 $s-icon-vermouth-width: 55px
 $s-icon-vermouth-height: 70px
 $s-icon-vermouth-total-width: 249px
 $s-icon-vermouth-total-height: 187px
 $s-icon-vermouth-image: '../img/sprite.png'
-$s-icon-vermouth: (121px, 75px, -121px, -75px, 55px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-vermouth', )
+$s-icon-vermouth: (61px, 75px, -61px, -75px, 55px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-vermouth', )
 $s-icon-wine-active-name: 's-icon-wine-active'
 $s-icon-wine-active-x: 199px
 $s-icon-wine-active-y: 75px
@@ -253,7 +275,7 @@ $s-icon-wine: (199px, 0px, -199px, 0px, 50px, 70px, 249px, 187px, '../img/sprite
 $spritesheet-width: 249px
 $spritesheet-height: 187px
 $spritesheet-image: '../img/sprite.png'
-$spritesheet-sprites: ($s-icon-basket, $s-icon-close-basket, $s-icon-close, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-liqueurs-active, $s-icon-liqueurs, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-full, $s-icon-star, $s-icon-strong-alcohol-active, $s-icon-strong-alcohol, $s-icon-up, $s-icon-vermouth-active, $s-icon-vermouth, $s-icon-wine-active, $s-icon-wine, )
+$spritesheet-sprites: ($s-icon-basket, $s-icon-close-basket, $s-icon-close, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-liqueurs-active, $s-icon-liqueurs, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-big, $s-icon-star-full-big, $s-icon-star-full, $s-icon-star, $s-icon-strong-alcohol-active, $s-icon-strong-alcohol, $s-icon-up, $s-icon-vermouth-active, $s-icon-vermouth, $s-icon-wine-active, $s-icon-wine, )
 $spritesheet: (249px, 187px, '../img/sprite.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
