--- a/src/templates/category.html
+++ b/src/templates/category.html
@@ -19,7 +19,7 @@ title: category
 						</div>
 						<ul class="breadcrumbs preview-category__breadcrumbs">
 							<li><a href="#">Главная</a></li>
-							<li class="active"><a href="#">Крепкие напитки</a></li>
+							<li class="current"><a href="#">Крепкие напитки</a></li>
 						</ul>
 					</div>
 				</div>
@@ -31,8 +31,8 @@ title: category
 		<div class="col-items">
 			<div class="inner">
 				<div class="row">
-					<div class="col-item">
-						<div class="col-item__wrapper">
+					<div class="col-items__wrapper">
+						<div class="col-item">
 							<div class="col-item__img">
 								<img src="img/img-viski.png" alt="img">
 							</div>
@@ -43,8 +43,8 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col-item">
-						<div class="col-item__wrapper">
+					<div class="col-items__wrapper">
+						<div class="col-item">
 							<div class="col-item__img">
 								<img src="img/img-brendi.png" alt="img">
 							</div>
@@ -55,8 +55,8 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col-item">
-						<div class="col-item__wrapper">
+					<div class="col-items__wrapper">
+						<div class="col-item">
 							<div class="col-item__img">
 								<img src="img/img-rom.png" alt="img">
 							</div>
@@ -67,8 +67,8 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col-item">
-						<div class="col-item__wrapper">
+					<div class="col-items__wrapper">
+						<div class="col-item">
 							<div class="col-item__img">
 								<img src="img/img-jin.png" alt="img">
 							</div>
@@ -79,8 +79,8 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col-item">
-						<div class="col-item__wrapper">
+					<div class="col-items__wrapper">
+						<div class="col-item">
 							<div class="col-item__img">
 								<img src="img/img-tekila.png" alt="img">
 							</div>
@@ -91,8 +91,8 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col-item">
-						<div class="col-item__wrapper">
+					<div class="col-items__wrapper">
+						<div class="col-item">
 							<div class="col-item__img">
 								<img src="img/img-vodka.png" alt="img">
 							</div>
@@ -103,8 +103,8 @@ title: category
 							</div>
 						</div>
 					</div>
-					<div class="col-item">
-						<div class="col-item__wrapper">
+					<div class="col-items__wrapper">
+						<div class="col-item">
 							<div class="col-item__img">
 								<img src="img/img-absent.png" alt="img">
 							</div>
@@ -147,7 +147,7 @@ title: category
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -172,7 +172,7 @@ title: category
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -198,7 +198,7 @@ title: category
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_old">1500 грн</span><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -224,7 +224,7 @@ title: category
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_old">1500 грн</span><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -249,7 +249,7 @@ title: category
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -274,7 +274,7 @@ title: category
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -300,7 +300,7 @@ title: category
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_old">1500 грн</span><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
@@ -326,7 +326,7 @@ title: category
 								<div class="item__categories">Ликер</div>
 								<div class="item__price"><span class="item__price_old">1500 грн</span><span class="item__price_default">510 грн</span></div>
 								<div class="item__btn">
-									<a href="#" class="btn btn_block btn_small"><i class="icon icon-basket"></i><span>в корзину</span></a>
+									<a href="#" class="btn btn_block btn_small btn_icon"><i class="icon icon-basket"></i><span>в корзину</span></a>
 								</div>
 							</div>
 						</div>
