--- a/src/sass/part/_button.sass
+++ b/src/sass/part/_button.sass
@@ -101,6 +101,20 @@
 	&_basket
 		display: inline-block
 		vertical-align: middle
+		position: relative
+		.number
+			width: 11px
+			height: 11px
+			background-color: $pink
+			border-radius: 50%
+			text-align: center
+			line-height: 11px
+			color: $white
+			font-size: 8px
+			font-weight: 700
+			position: absolute
+			top: -5px
+			right: -5px
 	&-add
 		font-size: 0
 		display: inline-block
