--- a/src/sass/part/_main.sass
+++ b/src/sass/part/_main.sass
@@ -73,7 +73,7 @@
 			position: relative
 			writing-mode: vertical-lr
 			display: block
-			min-height: 250px
+			white-space: nowrap
 			&:before
 				content: ""
 				height: 40px
