--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -11,7 +11,10 @@
 				<a href="#" class="btn_login">
 					<span>войти</span>
 				</a>
-				<a href="#" class="btn_basket"><i class="icon icon-login"></i></a>
+				<a href="#" class="btn_basket">
+					<i class="icon icon-login"></i>
+					<span class="number">3</span>
+				</a>
 			</div>
 		</div>
 	</div>
