--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -38,7 +38,7 @@
 						<div class="sm-item__input">
 							<div class="input__address">
 								<form action="/">
-									<input type="text" placeholder="Адрес электронной почты">
+									<input type="text" class="input" placeholder="Адрес электронной почты">
 									<button><i class="icon icon-input-arrow"></i></button>
 								</form>
 							</div>
