--- a/src/sass/helpers/_sprite.sass
+++ b/src/sass/helpers/_sprite.sass
@@ -9,27 +9,38 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites
 $s-icon-basket-name: 's-icon-basket'
-$s-icon-basket-x: 51px
+$s-icon-basket-x: 72px
 $s-icon-basket-y: 150px
-$s-icon-basket-offset-x: -51px
+$s-icon-basket-offset-x: -72px
 $s-icon-basket-offset-y: -150px
 $s-icon-basket-width: 16px
 $s-icon-basket-height: 20px
 $s-icon-basket-total-width: 249px
 $s-icon-basket-total-height: 187px
 $s-icon-basket-image: '../img/sprite.png'
-$s-icon-basket: (51px, 150px, -51px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-basket', )
+$s-icon-basket: (72px, 150px, -72px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-basket', )
 $s-icon-close-basket-name: 's-icon-close-basket'
-$s-icon-close-basket-x: 93px
+$s-icon-close-basket-x: 156px
 $s-icon-close-basket-y: 150px
-$s-icon-close-basket-offset-x: -93px
+$s-icon-close-basket-offset-x: -156px
 $s-icon-close-basket-offset-y: -150px
 $s-icon-close-basket-width: 16px
 $s-icon-close-basket-height: 16px
 $s-icon-close-basket-total-width: 249px
 $s-icon-close-basket-total-height: 187px
 $s-icon-close-basket-image: '../img/sprite.png'
-$s-icon-close-basket: (93px, 150px, -93px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-close-basket', )
+$s-icon-close-basket: (156px, 150px, -156px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-close-basket', )
+$s-icon-close-gray-name: 's-icon-close-gray'
+$s-icon-close-gray-x: 217px
+$s-icon-close-gray-y: 150px
+$s-icon-close-gray-offset-x: -217px
+$s-icon-close-gray-offset-y: -150px
+$s-icon-close-gray-width: 10px
+$s-icon-close-gray-height: 10px
+$s-icon-close-gray-total-width: 249px
+$s-icon-close-gray-total-height: 187px
+$s-icon-close-gray-image: '../img/sprite.png'
+$s-icon-close-gray: (217px, 150px, -217px, -150px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-close-gray', )
 $s-icon-close-name: 's-icon-close'
 $s-icon-close-x: 181px
 $s-icon-close-y: 96px
@@ -42,16 +53,16 @@ $s-icon-close-total-height: 187px
 $s-icon-close-image: '../img/sprite.png'
 $s-icon-close: (181px, 96px, -181px, -96px, 12px, 12px, 249px, 187px, '../img/sprite.png', 's-icon-close', )
 $s-icon-facebook-name: 's-icon-facebook'
-$s-icon-facebook-x: 135px
+$s-icon-facebook-x: 93px
 $s-icon-facebook-y: 150px
-$s-icon-facebook-offset-x: -135px
+$s-icon-facebook-offset-x: -93px
 $s-icon-facebook-offset-y: -150px
 $s-icon-facebook-width: 16px
 $s-icon-facebook-height: 16px
 $s-icon-facebook-total-width: 249px
 $s-icon-facebook-total-height: 187px
 $s-icon-facebook-image: '../img/sprite.png'
-$s-icon-facebook: (135px, 150px, -135px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-facebook', )
+$s-icon-facebook: (93px, 150px, -93px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-facebook', )
 $s-icon-hearth-name: 's-icon-hearth'
 $s-icon-hearth-x: 177px
 $s-icon-hearth-y: 150px
@@ -64,60 +75,60 @@ $s-icon-hearth-total-height: 187px
 $s-icon-hearth-image: '../img/sprite.png'
 $s-icon-hearth: (177px, 150px, -177px, -150px, 16px, 14px, 249px, 187px, '../img/sprite.png', 's-icon-hearth', )
 $s-icon-input-arrow-name: 's-icon-input-arrow'
-$s-icon-input-arrow-x: 217px
+$s-icon-input-arrow-x: 232px
 $s-icon-input-arrow-y: 150px
-$s-icon-input-arrow-offset-x: -217px
+$s-icon-input-arrow-offset-x: -232px
 $s-icon-input-arrow-offset-y: -150px
 $s-icon-input-arrow-width: 12px
 $s-icon-input-arrow-height: 6px
 $s-icon-input-arrow-total-width: 249px
 $s-icon-input-arrow-total-height: 187px
 $s-icon-input-arrow-image: '../img/sprite.png'
-$s-icon-input-arrow: (217px, 150px, -217px, -150px, 12px, 6px, 249px, 187px, '../img/sprite.png', 's-icon-input-arrow', )
+$s-icon-input-arrow: (232px, 150px, -232px, -150px, 12px, 6px, 249px, 187px, '../img/sprite.png', 's-icon-input-arrow', )
 $s-icon-instagram-name: 's-icon-instagram'
-$s-icon-instagram-x: 156px
+$s-icon-instagram-x: 135px
 $s-icon-instagram-y: 150px
-$s-icon-instagram-offset-x: -156px
+$s-icon-instagram-offset-x: -135px
 $s-icon-instagram-offset-y: -150px
 $s-icon-instagram-width: 16px
 $s-icon-instagram-height: 16px
 $s-icon-instagram-total-width: 249px
 $s-icon-instagram-total-height: 187px
 $s-icon-instagram-image: '../img/sprite.png'
-$s-icon-instagram: (156px, 150px, -156px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-instagram', )
+$s-icon-instagram: (135px, 150px, -135px, -150px, 16px, 16px, 249px, 187px, '../img/sprite.png', 's-icon-instagram', )
 $s-icon-liqueurs-active-name: 's-icon-liqueurs-active'
-$s-icon-liqueurs-active-x: 0px
+$s-icon-liqueurs-active-x: 69px
 $s-icon-liqueurs-active-y: 0px
-$s-icon-liqueurs-active-offset-x: 0px
+$s-icon-liqueurs-active-offset-x: -69px
 $s-icon-liqueurs-active-offset-y: 0px
 $s-icon-liqueurs-active-width: 64px
 $s-icon-liqueurs-active-height: 70px
 $s-icon-liqueurs-active-total-width: 249px
 $s-icon-liqueurs-active-total-height: 187px
 $s-icon-liqueurs-active-image: '../img/sprite.png'
-$s-icon-liqueurs-active: (0px, 0px, 0px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs-active', )
+$s-icon-liqueurs-active: (69px, 0px, -69px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs-active', )
 $s-icon-liqueurs-name: 's-icon-liqueurs'
-$s-icon-liqueurs-x: 69px
+$s-icon-liqueurs-x: 0px
 $s-icon-liqueurs-y: 0px
-$s-icon-liqueurs-offset-x: -69px
+$s-icon-liqueurs-offset-x: 0px
 $s-icon-liqueurs-offset-y: 0px
 $s-icon-liqueurs-width: 64px
 $s-icon-liqueurs-height: 70px
 $s-icon-liqueurs-total-width: 249px
 $s-icon-liqueurs-total-height: 187px
 $s-icon-liqueurs-image: '../img/sprite.png'
-$s-icon-liqueurs: (69px, 0px, -69px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs', )
+$s-icon-liqueurs: (0px, 0px, 0px, 0px, 64px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-liqueurs', )
 $s-icon-login-name: 's-icon-login'
-$s-icon-login-x: 72px
+$s-icon-login-x: 51px
 $s-icon-login-y: 150px
-$s-icon-login-offset-x: -72px
+$s-icon-login-offset-x: -51px
 $s-icon-login-offset-y: -150px
 $s-icon-login-width: 16px
 $s-icon-login-height: 20px
 $s-icon-login-total-width: 249px
 $s-icon-login-total-height: 187px
 $s-icon-login-image: '../img/sprite.png'
-$s-icon-login: (72px, 150px, -72px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-login', )
+$s-icon-login: (51px, 150px, -51px, -150px, 16px, 20px, 249px, 187px, '../img/sprite.png', 's-icon-login', )
 $s-icon-menu-name: 's-icon-menu'
 $s-icon-menu-x: 198px
 $s-icon-menu-y: 150px
@@ -196,27 +207,27 @@ $s-icon-star-total-height: 187px
 $s-icon-star-image: '../img/sprite.png'
 $s-icon-star: (181px, 128px, -181px, -128px, 10px, 10px, 249px, 187px, '../img/sprite.png', 's-icon-star', )
 $s-icon-strong-alcohol-active-name: 's-icon-strong-alcohol-active'
-$s-icon-strong-alcohol-active-x: 0px
-$s-icon-strong-alcohol-active-y: 75px
-$s-icon-strong-alcohol-active-offset-x: 0px
-$s-icon-strong-alcohol-active-offset-y: -75px
+$s-icon-strong-alcohol-active-x: 138px
+$s-icon-strong-alcohol-active-y: 0px
+$s-icon-strong-alcohol-active-offset-x: -138px
+$s-icon-strong-alcohol-active-offset-y: 0px
 $s-icon-strong-alcohol-active-width: 56px
 $s-icon-strong-alcohol-active-height: 70px
 $s-icon-strong-alcohol-active-total-width: 249px
 $s-icon-strong-alcohol-active-total-height: 187px
 $s-icon-strong-alcohol-active-image: '../img/sprite.png'
-$s-icon-strong-alcohol-active: (0px, 75px, 0px, -75px, 56px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-strong-alcohol-active', )
+$s-icon-strong-alcohol-active: (138px, 0px, -138px, 0px, 56px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-strong-alcohol-active', )
 $s-icon-strong-alcohol-name: 's-icon-strong-alcohol'
-$s-icon-strong-alcohol-x: 138px
-$s-icon-strong-alcohol-y: 0px
-$s-icon-strong-alcohol-offset-x: -138px
-$s-icon-strong-alcohol-offset-y: 0px
+$s-icon-strong-alcohol-x: 0px
+$s-icon-strong-alcohol-y: 75px
+$s-icon-strong-alcohol-offset-x: 0px
+$s-icon-strong-alcohol-offset-y: -75px
 $s-icon-strong-alcohol-width: 56px
 $s-icon-strong-alcohol-height: 70px
 $s-icon-strong-alcohol-total-width: 249px
 $s-icon-strong-alcohol-total-height: 187px
 $s-icon-strong-alcohol-image: '../img/sprite.png'
-$s-icon-strong-alcohol: (138px, 0px, -138px, 0px, 56px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-strong-alcohol', )
+$s-icon-strong-alcohol: (0px, 75px, 0px, -75px, 56px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-strong-alcohol', )
 $s-icon-up-name: 's-icon-up'
 $s-icon-up-x: 0px
 $s-icon-up-y: 175px
@@ -252,30 +263,30 @@ $s-icon-vermouth-image: '../img/sprite.png'
 $s-icon-vermouth: (61px, 75px, -61px, -75px, 55px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-vermouth', )
 $s-icon-wine-active-name: 's-icon-wine-active'
 $s-icon-wine-active-x: 199px
-$s-icon-wine-active-y: 75px
+$s-icon-wine-active-y: 0px
 $s-icon-wine-active-offset-x: -199px
-$s-icon-wine-active-offset-y: -75px
+$s-icon-wine-active-offset-y: 0px
 $s-icon-wine-active-width: 50px
 $s-icon-wine-active-height: 70px
 $s-icon-wine-active-total-width: 249px
 $s-icon-wine-active-total-height: 187px
 $s-icon-wine-active-image: '../img/sprite.png'
-$s-icon-wine-active: (199px, 75px, -199px, -75px, 50px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-wine-active', )
+$s-icon-wine-active: (199px, 0px, -199px, 0px, 50px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-wine-active', )
 $s-icon-wine-name: 's-icon-wine'
 $s-icon-wine-x: 199px
-$s-icon-wine-y: 0px
+$s-icon-wine-y: 75px
 $s-icon-wine-offset-x: -199px
-$s-icon-wine-offset-y: 0px
+$s-icon-wine-offset-y: -75px
 $s-icon-wine-width: 50px
 $s-icon-wine-height: 70px
 $s-icon-wine-total-width: 249px
 $s-icon-wine-total-height: 187px
 $s-icon-wine-image: '../img/sprite.png'
-$s-icon-wine: (199px, 0px, -199px, 0px, 50px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-wine', )
+$s-icon-wine: (199px, 75px, -199px, -75px, 50px, 70px, 249px, 187px, '../img/sprite.png', 's-icon-wine', )
 $spritesheet-width: 249px
 $spritesheet-height: 187px
 $spritesheet-image: '../img/sprite.png'
-$spritesheet-sprites: ($s-icon-basket, $s-icon-close-basket, $s-icon-close, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-liqueurs-active, $s-icon-liqueurs, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-big, $s-icon-star-full-big, $s-icon-star-full, $s-icon-star, $s-icon-strong-alcohol-active, $s-icon-strong-alcohol, $s-icon-up, $s-icon-vermouth-active, $s-icon-vermouth, $s-icon-wine-active, $s-icon-wine, )
+$spritesheet-sprites: ($s-icon-basket, $s-icon-close-basket, $s-icon-close-gray, $s-icon-close, $s-icon-facebook, $s-icon-hearth, $s-icon-input-arrow, $s-icon-instagram, $s-icon-liqueurs-active, $s-icon-liqueurs, $s-icon-login, $s-icon-menu, $s-icon-mouse, $s-icon-search, $s-icon-star-big, $s-icon-star-full-big, $s-icon-star-full, $s-icon-star, $s-icon-strong-alcohol-active, $s-icon-strong-alcohol, $s-icon-up, $s-icon-vermouth-active, $s-icon-vermouth, $s-icon-wine-active, $s-icon-wine, )
 $spritesheet: (249px, 187px, '../img/sprite.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
